remove window stats and fix gallery theater on mobile

--- a/index.css
+++ b/index.css
@@ -31,6 +31,7 @@
 :root {
   --mobileNavbarHeight: 60px;
   --regularNavbarHeight: 70px;
+  --imgViewerHeight: 600px;
 }
 
 /* ==================  GRID SETUP destop ================== */
@@ -904,7 +905,6 @@ a.label {
 
 /* ==================  TEAM PAGE desktop ================== */
 
-
 .member-container {
   display: grid;
 	grid-template-columns: repeat(3, 1fr);
@@ -956,6 +956,13 @@ h6.thesis {
 
 /* ==================  GALLERY PAGE desktop  ================== */
 
+/* only on desktop should the nav disappear if in theater mode */
+@media screen and (min-width: 1023px) {
+  .theater > #navbar_section {
+    display: none;
+  }
+}
+
 .team-photos.page-intro {
  margin-bottom: 100px;
 }
@@ -969,7 +976,6 @@ h6.thesis {
 
 .img-container > img {
   height: 180px;
-  /* background-size: cover; */
   object-fit: cover;
   cursor: pointer;
   width: 100%;
@@ -1017,23 +1023,12 @@ body.theater {
 .img-viewer {
   position: fixed;
   width: var(--w);
-  height: var(--localHeight);
+  height: var(--imgViewerHeight);
   top: 50%;
   left: 50%;
-  margin-top: calc(var(--localHeight) / -2);
+  margin-top: calc(var(--imgViewerHeight) / -2);
   margin-left: calc(var(--w)/-2);
   display: none;
-}
-
-@media screen and (min-width: 1340px) {
-  .img-viewer {
-    --localHeight: 600px;
-  }
-}
-@media screen and (max-width: 1340px) {
-  .img-viewer {
-    --localHeight: 500px;
-  }
 }
 
 .img-viewer.on {
@@ -1044,9 +1039,6 @@ body.theater {
   width: 100%;
   height: auto;
   object-fit: contain;
-  /*background-size: contain;*/
-  /*background-repeat: no-repeat;*/
-  /*background-position: center;*/
 }
 
 #caption {
@@ -1054,7 +1046,7 @@ body.theater {
   position: fixed;
   font-size: 20px;
   top: 52%;
-  margin-top: calc(var(--localHeight) / 2);
+  margin-top: calc(var(--imgViewerHeight) / 2);
   width: inherit;
 }
 
@@ -1075,7 +1067,7 @@ body.theater {
 #left_chevron, #right_chevron {
   width: 52px;
   padding: 12px;
-  height: var(--localHeight);
+  height: var(--imgViewerHeight);
 }
 
 #left_chevron {
@@ -1118,6 +1110,60 @@ body.theater {
 /* ===== mobile ===== */
 
 @media screen and (max-width: 768px) {
+  :root {
+    --imgViewerHeight: 500px;
+  }
+  
+  .img-viewer {
+    left: 0;
+    margin-left: 0;
+  }
+
+  #left_chevron, #right_chevron {
+    width: 32px;
+    padding: 12px;
+    height: 32px;
+    top: var(--imgViewerHeight);
+    position: absolute;
+  }
+
+  #left_chevron {
+    margin-left: 0;
+    left: 0;
+  }
+  
+  #right_chevron {
+    margin-right: 0;
+    right: 0;
+  }
+
+  #caption {
+    text-align: center;
+    position: absolute;
+    top: var(--imgViewerHeight);
+    margin-top: 12px; 
+    left: 52px;
+    right: 52px;
+  }
+
+  .img-viewer-close > svg {
+    width: 32px;
+    height: 32px;
+  }
+
+  .img-viewer-close {
+    top: 16px;
+    right: 16px;
+    z-index: 2;
+    background-color: white;
+  }
+  
+  .img-viewer-close.on {
+    top: 16px;
+    right: 16px;
+  }
+
+
   .img-container > img {
     height: 100px;
   }
